# claw-code-parity

./: BEHAVIORAL_DIVERGENCES.md  CLAUDE.md  PARITY.md  README.md
.claude/agents/: architect.md  port-engineer.md  project-lead.md  researcher.md  rust-systems.md  test-engineer.md
.github/: FUNDING.yml
.github/workflows/: python-ci.yml  rust-ci.yml
claudedocs/: research_agentic_loop_improvements.md  research_parallel_tool_execution.md
rust/: .gitignore  MOCK_PARITY_HARNESS.md  README.md  TOOL_EDGE_CASES.md
rust/crates/api/src/: client.rs
rust/crates/api/src/providers/: anthropic.rs
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: config.rs  conversation.rs  hooks.rs  lib.rs  oauth.rs  parallel_tools.rs  progress_tracker.rs  sandbox.rs  session.rs  tool_budget.rs
rust/crates/rusty-claude-cli/src/: main.rs
rust/crates/rusty-claude-cli/tests/: mock_parity_harness.rs
rust/crates/sandbox-types/: Cargo.toml
rust/crates/sandbox-types/src/: lib.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: bash.rs  bash_validation.rs  error.rs  file_ops.rs  lib.rs  sandbox.rs
src/: main.py  parity_audit.py  query_engine.py  runtime.py
