[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
plugins = { path = "../plugins" }
sandbox-types = { path = "../sandbox-types" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }

[lints]
workspace = true
