[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
glob = "0.3"
plugins = { path = "../plugins" }
regex = "1"
runtime = { path = "../runtime" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
sandbox-types = { path = "../sandbox-types" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }
walkdir = "2"

[lints]
workspace = true
